# Parallelizm-Theory

./: .gitignore
lab1/: .gitignore  Makefile
lab2/: Makefile  task1  task1.c  task2  task2.c  task3_each_section  task3_metod_1.cpp  task3_metod_2.cpp  task3_one_section
lab3/task1/: Makefile  benchmark.py  results.csv  task1.cpp
lab3/task2/: benchmark.py  run_benchmark.sh
lab3/task2/client/: client.h  client.tpp
lab4/: all_classes.py  main.py
lab5/: all_classes.py  logging_settings.py  main.py  utils.py
lab6/: CMakeLists.txt  all_classes.h  main.cpp
task1/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
task2/: CMakeLists.txt  main.c
